# valuation_data_pipeline

./: .gitignore  README.md  docker-compose.yml  main.tf  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: docker-image.yml
projects/valuation_frontend/: Dockerfile  pyproject.toml  requirements.txt
projects/valuation_frontend/tests/: test_valuation_frontend.py
projects/valuation_frontend/valuation_frontend/: app.py
projects/valuation_frontend/valuation_frontend/static/styles/: bootstrap.css  site.css
projects/valuation_frontend/valuation_frontend/templates/: about.html  base.html  damodaran.html  greenwald.html  home.html  margin_of_safety.html  payback.html  ten_cap.html
projects/valuation_pipeline/: Dockerfile  pyproject.toml  requirements.txt
projects/valuation_pipeline/tests/: test_data_fetcher.py  test_selenium.py  test_valuation_metrics.py
projects/valuation_pipeline/valuation_pipeline/: runner.py
projects/valuation_pipeline/valuation_pipeline/data_fetcher/: app.py
projects/valuation_pipeline/valuation_pipeline/data_loader/: app.py
projects/valuation_pipeline/valuation_pipeline/valuation_metrics/: app.py  data.py  greenwald.py
resources/sql/: models.sql
